// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeContainer  hides buttons 1`] = `
<div
  className="episode-selected episode-selected--expanded"
>
  <div
    className="episode-selected__teaser-wrapper"
  >
    <div
      className="video-container"
    >
      <div>
        VideoPlayer
      </div>
    </div>
    <div
      className="episode-selected__image episode-selected__image--selected"
    >
      <img
        alt="title xyz"
        className="first-arrow"
        src="Square-Arrow.svg"
      />
      <img
        alt="title xyz"
        className="second-arrow"
        src="Square-Arrow.svg"
      />
    </div>
  </div>
  <div
    className="episode-selected__info-container"
  >
    <div>
      EpisodeDescription
    </div>
    <div
      className="episode-buttons"
    >
      <div
        className="episode-buttons__learn"
      >
        Learn More
      </div>
    </div>
  </div>
</div>
`;

exports[`HomeContainer  renders with data 1`] = `
<div
  className="episode-selected episode-selected--expanded"
>
  <div
    className="episode-selected__teaser-wrapper"
  >
    <div
      className="video-container"
    >
      <div>
        VideoPlayer
      </div>
    </div>
    <div
      className="episode-selected__image episode-selected__image--selected"
    >
      <img
        alt="title xyz"
        className="first-arrow"
        src="Square-Arrow.svg"
      />
      <img
        alt="title xyz"
        className="second-arrow"
        src="Square-Arrow.svg"
      />
    </div>
  </div>
  <div
    className="episode-selected__info-container"
  >
    <div>
      EpisodeDescription
    </div>
  </div>
</div>
`;
